# random-data-gen

./: .gitignore  Makefile  README.md  pyproject.toml
random_data_gen/: data_generator.py  transactional_features.py  transactional_generator.py
random_data_gen/features/: transactional_features.py
tests/: test_random_data_gen.py
