[tool.poetry]
name = "random-data-gen"
version = "0.1.0"
description = ""
authors = ["Felipe Sassi <felipe.sassi@datarisk.io>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "1.4.0"
numpy = "1.22.1"
mypy = "0.931"
black = "22.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
