[tool.poetry]
name = "random-data-gen"
version = "0.1.1"
description = ""
authors = ["Felipe Sassi <felipe.sassi@datarisk.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.0"
numpy = "^1.22.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
