[tool.poetry]
name = "random-data-gen"
version = "0.1.2"
description = "Package to generate random transactional data"
authors = ["Felipe Sassi <felipesassi@outlook.com>"]

readme = "README.md"
repository = "https://github.com/felipesassi/random-data-gen"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.0"
numpy = "^1.22.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
mypy = "^0.931"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

